--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/Excel Adaptacion/excel.html"
+    "livePreview.defaultPreviewPath": "/ProyectoV1/index.html"
 }
